separando banners aprovados e reprovados

--- a/docroot/WEB-INF/src/content/Language.properties
+++ b/docroot/WEB-INF/src/content/Language.properties
@@ -11,12 +11,16 @@ approved = Aprovado
 reproved = Reprovado
 type-image = Tipo: Imagem
 type-news = Tipo: Notícia
-banner-empty-results-message = Lista vazia
+banner-active-empty-results-message = Ative um banenr existente na aba Banners inativos
 activate = Ativar
 deactivate = Desativar
+active = Ativo
+banners-active = Banners ativos
+banners-inative = Banners inativos
 banner-name-required = Nome do banner &eacute necessário
 banner-title-required = Titulo do banner &eacute necessário
 banner-description-required = Descrição do banner &eacute necessário
 banner-link-required = Link do banner &eacute necessário
 banner-status-required = Status do banner &eacute necessário
 banner-image-required = Imagem do banner &eacute necessário
+select-existing-banenr-or-add-some-banner-to-be-displayed-in-this-portlet = Selecionar um banenr existente ou adicionar um para visualizar nesse portlet.
