--- a/docroot/WEB-INF/sql/indexes.properties
+++ b/docroot/WEB-INF/sql/indexes.properties
@@ -1,6 +1,8 @@
 IX_1635282D=Banner.BannerId
 IX_E4181CD8=Banner.GroupId
 IX_4C3E4651=Banner.Name
+IX_A6096B6F=Banner.Position
 IX_16BED8F8=Banner.Status
+IX_E01F32B2=Banner.StatusGroupId
 IX_86FD5EB6=Banner.Title
 IX_E4181CD8=Banner.groupId
